tests/errors/test_11.x
// If conditional is not boolean

import std, io;

fn main() -> void {

    if 1 {
        io::println(1);
    }

    if 'c' {
      io::println(1);
    }

}